--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "reset": "^0.1.0",
+    "reset-css": "^5.0.2",
+    "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
