--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "reset": "^0.1.0",
     "reset-css": "^5.0.2",
     "styled-components": "^6.1.19",
